--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,25 @@
     <artifactId>spring-velocity-views</artifactId>
     <packaging>jar</packaging>
     <name>Spring Velocity views</name>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.0.1</version>
     <description>Retro Apache Velocity views for modern Spring Boot releases</description>
+
+    <distributionManagement>
+        <repository>
+            <id>artifact-registry</id>
+            <url>artifactregistry://europe-maven.pkg.dev/eelpie-cloud-registry/eelpie</url>
+        </repository>
+    </distributionManagement>
+
+    <build>
+        <extensions>
+            <extension>
+                <groupId>com.google.cloud.artifactregistry</groupId>
+                <artifactId>artifactregistry-maven-wagon</artifactId>
+                <version>2.1.0</version>
+            </extension>
+        </extensions>
+    </build>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
